--- a/src/styles/components/signup_form.module.css
+++ b/src/styles/components/signup_form.module.css
@@ -1,6 +1,7 @@
 .formContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .formContainer > div {
@@ -24,8 +25,20 @@
   border-left: 0;
   border-right: 0;
   padding: .5rem;
+  width: 90%;
 
   background-color: transparent;
+}
+
+.formSubmit {
+  border: none;
+  background-color: var(--yellow-honey);
+  border-radius: 1rem;
+  width: 8rem;
+  padding: .8rem;
+  margin: 0 auto;
+  color: var(--whitecocktail);
+  font-weight: 700;
 }
 
 .formContainer > div > input:focus ~ label,
@@ -33,3 +46,4 @@
   top: -1.5rem;
   font-size: 0.8rem;
 }
+
