--- a/src/styles/screens/signup.module.css
+++ b/src/styles/screens/signup.module.css
@@ -11,11 +11,12 @@
 
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .card {
   background-color: var(--whitecocktail);
-
+  box-shadow: 0.5em 0.5em 0em var(--box-shadow);
   padding: .8rem;
   max-width: 300px;
 }
