--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,14 +5,14 @@
 }
 
 :root {
-  --whitecocktail: #f0f0f0;
+  --whitecocktail: #f8f6f6;
   --pink: #F4AFAB;
   --blue: #81ADC8;
   --dark-blue: #3E517A;
   --fancy-pink: #BF1363;
   --yellow-honey: #F7B32B;
   --background: #FCF4F4;
-  --font-color: #202020;
+  --font-color: #534D4D;
   --box-shadow:  #0000006b;
 }
 
