--- a/src/styles/components/signup_form.module.css
+++ b/src/styles/components/signup_form.module.css
@@ -24,6 +24,7 @@
   border-top: 0;
   border-left: 0;
   border-right: 0;
+  border-bottom: solid .1rem var(--font-color);
   padding: .5rem;
   width: 90%;
 
