--- a/src/styles/components/logo.module.css
+++ b/src/styles/components/logo.module.css
@@ -1,14 +1,20 @@
 .logoContainer {
   background-color: var(--blue);
   border-radius: 50%;
-  width: 10rem;
+  /* width: 9rem; */
 
-  position: relative;
+  box-shadow: 0.1em 0.1em 0em var(--box-shadow);
+
+  /* position: relative; */
+
+  width: 4rem;
+    position: absolute;
+    top: 0%;
 }
 
 .logoContainer > img {
   width: 100%;
-  padding: 1rem;
+  padding: .8rem;
 }
 
 .logoContainer > span {
@@ -23,4 +29,24 @@
 
 .logoContainer > span:last-child {
   left: 60%;
+}
+
+@media(min-width: 480px) {
+  .logoContainer {
+    /* width: 4rem;
+    position: absolute;
+    top: 0%; */
+    position: relative;
+    width: 9rem;
+  }
+
+  .logoContainer > img {
+    padding: .1rem;
+  }
+}
+
+@media(max-width: 479px) {
+  .logoContainer > span {
+    display: none;
+  }
 }
