--- a/src/styles/components/logo.module.css
+++ b/src/styles/components/logo.module.css
@@ -1,15 +1,13 @@
 .logoContainer {
-  background-color: var(--blue);
+  background-color: var(--yellow-honey);
   border-radius: 50%;
-  /* width: 9rem; */
 
   box-shadow: 0.1em 0.1em 0em var(--box-shadow);
 
-  /* position: relative; */
-
-  width: 4rem;
-    position: absolute;
-    top: 0%;
+  margin: 0 auto;
+  width: 5rem;
+  position: relative;
+  top: 0%;
 }
 
 .logoContainer > img {
@@ -19,23 +17,23 @@
 
 .logoContainer > span {
   position: absolute;
-  top: 43%;
-  left: 11%;
+  top: 42%;
+  left: -20%;
 
-  color: var(--whitecocktail);
+  /* color: var(--whitecocktail); */
   font-weight: 800;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
+  text-shadow: 3px 4px 0px var(--blue);
+  text-transform: uppercase;
+  letter-spacing: .6rem;
 }
 
 .logoContainer > span:last-child {
-  left: 60%;
+  left: 62%;
 }
 
 @media(min-width: 480px) {
   .logoContainer {
-    /* width: 4rem;
-    position: absolute;
-    top: 0%; */
     position: relative;
     width: 9rem;
   }
