--- a/src/styles/components/signin_signup_form.module.css
+++ b/src/styles/components/signin_signup_form.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  margin-top: 1rem;
 }
 
 .formContainer > div {
@@ -50,14 +52,25 @@
 }
 
 .formSubmit {
-  border: none;
   background-color: var(--yellow-honey);
+
+  font-weight: 700;
+  text-transform: uppercase;
+
+  border: solid 1px black;
   border-radius: 1rem;
   width: 8rem;
   padding: .8rem;
   margin: 0 auto;
-  color: var(--whitecocktail);
-  font-weight: 700;
+  transition: 0.3s;
+  outline: none;
+}
+
+.formSubmit:hover {
+  box-shadow: 8px 3px var(--blue);
+  background-color: var(--yellow-honey-hover);
+
+  transform: translateX(-1rem);
 }
 
 .formContainer > div > input:focus ~ label,
