--- a/src/styles/components/top_bar.module.css
+++ b/src/styles/components/top_bar.module.css
@@ -1,24 +1,29 @@
 .topBar{
-  background-color: var(--yellow-honey);
+  background-color: var(--whitecocktail);
+  border-bottom: 1px solid black;
+
   width: 100%;
-  padding: .4rem;
+  padding: 1rem;
 
   display: flex;
   justify-content: center;
+  position: absolute;
 }
 
 .topBar > span {
-  color: var(--whitecocktail);
+  color: var(--font-color);
   font-weight: 800;
   font-size: 2rem;
   text-shadow: 1px 1px 1px var(--box-shadow);
+  text-transform: uppercase;
+  letter-spacing: .8rem;
 
   margin-right: 2rem;
 }
 
 .topBar > span:last-child {
   margin-left: 4rem;
-  margin-right: 0;
+  margin-right: -1rem;
 }
 
 @media(min-width: 480px){
