--- a/src/styles/screens/signin_signup.module.css
+++ b/src/styles/screens/signin_signup.module.css
@@ -1,11 +1,17 @@
 .background {
-  background-image: url('../../images/background.jpg') !important;
+  background-image: url('../../images/background2.png') !important;
   background-size: cover;
   background-repeat: no-repeat;
+
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+  top: 0;
 }
 
 .container {
-  height: 100vh;
+  height: 100%;
   max-width: 992px;
   margin: 0 auto;
   padding-top: 2rem;
@@ -17,16 +23,36 @@
 
 .card {
   background-color: var(--whitecocktail);
-  box-shadow: 0.5em 0.5em 0em var(--box-shadow);
+  box-shadow: 2.5em 1.5em 0em var(--blue);
+  border: 1px solid black;
+  border-radius: .4rem;
 
   padding: .8rem;
   max-width: 300px;
-  margin-top: 1rem;
+  /* margin-top: 3rem; */
+  margin: 14rem auto 0rem auto;
 }
 
 .card > h1 {
   text-align: center;
   text-transform: uppercase;
+}
+
+.closeBtn {
+  background-color: var(--yellow-honey);
+  position: absolute;
+  top: 5rem;
+  right: 1rem;
+  padding: 2%;
+  box-shadow: 10px 5px var(--blue);
+  border: 1px solid black;
+  border-radius: .4rem;
+}
+
+.closeBtn > span {
+  font-weight: 900;
+  /* color: var(--whitecocktail); */
+  font-size: 2rem;
 }
 
 @media(min-width: 280px) {
@@ -36,5 +62,19 @@
 
   .card {
     padding: 1rem;
+    width: 23rem;
+  }
+}
+
+@media(max-width: 480px) {
+  .card {
+    /* margin: auto 0 auto 0; */
+    width: 23rem;
+  }
+}
+
+@media(min-width: 480px) {
+  .closeBtn {
+    display: none;
   }
 }
