--- a/src/styles/components/top_bar.module.css
+++ b/src/styles/components/top_bar.module.css
@@ -14,7 +14,7 @@
   color: var(--font-color);
   font-weight: 800;
   font-size: 2rem;
-  text-shadow: 1px 1px 1px var(--box-shadow);
+  text-shadow: 3px 4px 0px var(--yellow-honey);
   text-transform: uppercase;
   letter-spacing: .8rem;
 
